--- a/css/custom/make8bitart.css
+++ b/css/custom/make8bitart.css
@@ -17,7 +17,7 @@
 body { background: #efefef; padding: 0; margin: 0; font-family: 'VT323', Helvetica, Arial, sans-serif; font-size: 16px; color: #333; }
 
 /* canvas */
-canvas { background: #fff; cursor: crosshair; }
+canvas { background: #fff; cursor: crosshair; display: block; }
 	
 /* draggy "plugin" */
 .draggy { padding: 10px; box-shadow: 5px 5px 0 #000; border: 1px solid #000; background: #fffff3; -webkit-user-select: none; -moz-user-select: none; user-select: none; }
