--- a/css/custom/make8bitart.css
+++ b/css/custom/make8bitart.css
@@ -15,6 +15,7 @@
 }
 
 body { background: #efefef; padding: 0; margin: 0; font-family: 'VT323', Helvetica, Arial, sans-serif; font-size: 16px; color: #333; }
+a { color: blue; }
 
 /* canvas */
 canvas { background: #fff; cursor: crosshair; display: block; }
@@ -35,7 +36,6 @@ img.ui-hider { width: 20px; margin: 5px 5px 0 0; }
 
 #minimized-tools-list { list-style: none; }
 #minimized-tools-list li { display: inline-block; padding: 3px 10px; background: lime;  margin: 3px; }
-#minimized-tools-list li a { color: blue; }
 #minimized-tools-list li a:hover { color: green; cursor: pointer; }
 #minimized-tools-list li a:after { content: ' +'; }
 
@@ -43,7 +43,7 @@ img.ui-hider { width: 20px; margin: 5px 5px 0 0; }
 #credits { width: 165px; }
 #subheader { font-size: 1.3em; }
 h2 { background: aqua; display: inline-block; float: right; font-size: 1.2em; padding: 5px; margin: 10px 0 15px; }
-h2 a { color: blue; font-size: 1.2em;}
+h2 a { font-size: 1.2em;}
 .hearts { color: hotpink; }
 
 /* canvas tools box */
@@ -89,6 +89,9 @@ ul.instructions { padding: 0 0 0 20px; }
 #hex-color.current { border: 4px solid #000; }
 #color-dropper { border: 1px solid transparent; padding: 5px; vertical-align: middle; }
 #color-dropper.current-tool { border-color: #000; }
+
+/* wait */
+#wait { display: none; width: 100%; height: 100%; position: absolute; top: 0; left: 0; background: rgba(255,255,255,.75) url('../../assets/hourglass.gif') no-repeat; background-position: center center; text-align: center; }
 
 /* mobile */
 
