style tools, remove custom button

--- a/css/app/make8bitart.css
+++ b/css/app/make8bitart.css
@@ -39,7 +39,7 @@ canvas {
   padding: 10px;
   box-shadow: 5px 5px 0 #000;
   border: 1px solid #000;
-  background: #fffff3;
+  background: #eeffff;
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
@@ -185,7 +185,7 @@ ul.instructions {
 
 /* color palette box */
 #colorbox {
-  width: 150px;
+  width: 160px;
 }
 
 #colorbox h3 {
@@ -222,8 +222,8 @@ ul.instructions {
 .button.color {
   background: #fff;
   border: 5px solid none;
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   padding: 0;
   margin: 4px;
 }
@@ -305,7 +305,7 @@ ul.instructions {
 }
 
 #hex-color {
-  width: 45%;
+  width: 50%;
   margin-left: 5px;
 }
 
