--- a/css/app/make8bitart.css
+++ b/css/app/make8bitart.css
@@ -295,6 +295,10 @@ ul.instructions {
   margin-top: 15px;
 }
 
+#color ul.color-history {
+  margin-bottom: 5px;
+}
+
 #color-history-tools {
   display: block;
 }
