--- a/css/app/make8bitart.css
+++ b/css/app/make8bitart.css
@@ -65,13 +65,13 @@ img.ui-hider {
   width:50px;
   display: inline-block;
   padding: 5px 10px;
-  border: 1px solid #666;
+  border: 1px solid #aaa;
   background-color: #ccc;
 }
 
 .tabs li.active {
-  background-color: #999;
-  box-shadow: inset 0 0 5px #000;
+  background-color: magenta;
+  box-shadow: inset 1px 1px 3px #000;
 }
 
 /* tool tips */
@@ -142,18 +142,11 @@ img.ui-hider {
   font-size: 1.3em;
 }
 
-h2 {
+#header h2 {
   font-size: 1em;
   margin: 0;
   font-style: italic;
-}
-
-h2 a {
-  font-size: 1.2em;
-}
-
-.hearts {
-  color: hotpink;
+  text-align: right;
 }
 
 /* canvas tools box */
