fix color picker canvas css so all colors are reachable

--- a/css/app/make8bitart.css
+++ b/css/app/make8bitart.css
@@ -316,7 +316,7 @@ ul.instructions {
 
 /* color picker */
 #eight-bit-colors {
-  width: 100%; 
+  margin: 0 auto; 
 }
 #eight-bit-picker {
   position: relative;
