--- a/css/app/make8bitart.css
+++ b/css/app/make8bitart.css
@@ -377,7 +377,7 @@ ul.instructions {
 }
 
 /* save modal */
-#save-box {
+#save-modal-container {
   display: none;
   text-align: center;
   width: 100%;
