--- a/css/app/make8bitart.css
+++ b/css/app/make8bitart.css
@@ -57,6 +57,7 @@ canvas {
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
+  overflow: hidden;
 }
 
 img.ui-dragger {
@@ -76,7 +77,7 @@ img.ui-hider {
 }
 
 .tabs li {
-  width:50px;
+  width:100px;
   display: inline-block;
   padding: 5px 10px;
   border: 1px solid #aaa;
@@ -86,6 +87,10 @@ img.ui-hider {
 .tabs li.active {
   background-color: magenta;
   box-shadow: inset 1px 1px 3px #000;
+}
+
+.tabs:hover {
+  cursor: pointer;
 }
 
 /* tool tips */
@@ -218,19 +223,19 @@ ul.instructions {
 
 /* color picker/palette box */
 #colorbox {
-  width: 160px;
+  width: 195px;
 }
 
 #colorbox h3 {
   margin: 5px 0;
 }
 
-#palettes {
+.palettes {
   margin-bottom: 10px;
 }
 
-#palettes ul,
-#palettes ul li {
+.palettes ul,
+.palettes ul li {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -328,7 +333,8 @@ ul.instructions {
   margin-top: 15px;
 }
 
-#palettes ul.color-history-list {
+.palettes ul.color-history-list,
+.palettes ul.color-custom-list {
   margin-bottom: 5px;
 }
 
