--- a/css/app/make8bitart.css
+++ b/css/app/make8bitart.css
@@ -41,6 +41,11 @@ h3 {
   font-size: 1.5em;
 }
 
+img.icon-button {
+  max-height: 40px;
+  border: 3px dashed transparent;
+}
+
 /* canvas */
 canvas {
   background: #fff;
@@ -80,13 +85,15 @@ img.ui-hider {
   width:100px;
   display: inline-block;
   padding: 5px 10px;
-  border: 1px solid #aaa;
+  margin: 2px 0;
+  border: 1px solid #000;
   background-color: #ccc;
+  box-shadow: 2px 2px 0px #000;
 }
 
 .tabs li.active {
   background-color: magenta;
-  box-shadow: inset 1px 1px 3px #000;
+  box-shadow: inset 3px 3px 0px #000;
 }
 
 .tabs:hover {
@@ -128,8 +135,8 @@ img.ui-hider {
 
 #header h1 {
   font-family: '8bit Art Sans';
-  font-size: 3.5em;
-  line-height: .8em;
+  font-size: 2.5em;
+  line-height: 1em;
   margin: 0;
 }
 
@@ -185,7 +192,6 @@ img.ui-hider {
 }
 
 #paint, #pencil {
-  border: 1px solid transparent;
   padding: 5px;
   vertical-align: middle;
 }
@@ -195,11 +201,14 @@ img.ui-hider {
 }
 
 #size {
-  margin: 20px 0;
+  margin: 20px 0 0;
 }
 
 #pixel-size {
   width: 75%;
+  font-size: 1.2em;
+  font-family: monospace;
+  padding: 5px 3px;
 }
 
 #pixel-size-slider {
@@ -218,7 +227,7 @@ ul.instructions {
 
 /* save box */
 #savebox {
-  width: 145px;
+  width: 100px;
 }
 
 /* color picker/palette box */
@@ -364,16 +373,24 @@ ul.instructions {
 }
 
 #hex-color {
-  width: 50%;
+  width: 48%;
+  vertical-align: middle;
   margin-left: 5px;
+  font-size: 1.5em;
+  font-family: monospace;
+  padding: 5px 3px;
 }
 
 #hex-color.current {
-  border: 4px solid #000;
+  border: 2px solid #000;
+}
+
+.pound { 
+  vertical-align: middle;
+  font-size: 2em; 
 }
 
 #color-dropper {
-  border: 1px solid transparent;
   padding: 5px;
   vertical-align: middle;
 }
