--- a/css/app/make8bitart.css
+++ b/css/app/make8bitart.css
@@ -208,7 +208,7 @@ img.ui-hider {
   width: 75%;
   font-size: 1.2em;
   font-family: monospace;
-  padding: 5px 3px;
+  padding: 5px 3px 3px;
 }
 
 #pixel-size-slider {
@@ -378,7 +378,7 @@ ul.instructions {
   margin-left: 5px;
   font-size: 1.5em;
   font-family: monospace;
-  padding: 5px 3px;
+  padding: 5px 3px 3px;
 }
 
 #hex-color.current {
