--- a/css/app/make8bitart.css
+++ b/css/app/make8bitart.css
@@ -46,6 +46,10 @@ img.icon-button {
   border: 3px dashed transparent;
 }
 
+.hidden {
+  display: none;
+}
+
 /* canvas */
 canvas {
   background: #fff;
@@ -100,32 +104,6 @@ img.ui-hider {
   cursor: pointer;
 }
 
-/* tool tips */
-.tip {
-  display: inline-block;
-  font-weight: bold;
-  color: #000;
-  padding: 2px 6px;
-  background-color: #00c200;
-  position: relative;
-  border: 1px dashed green;
-}
-
-.tip-text {
-  display: none;
-  position: absolute;
-  top: 10px;
-  left: 20px;
-  width: 150px;
-  padding: 10px;
-  border: 1px solid #000;
-  background-color: #fff;
-  z-index: 50;
-}
-
-.tip:hover {
-  cursor: pointer;
-}
 
 /* header */
 #header {
@@ -401,7 +379,6 @@ ul.instructions {
 
 /* save modal */
 #save-modal-container {
-  display: none;
   text-align: center;
   width: 100%;
   height: 100%;
@@ -483,15 +460,7 @@ ul.instructions {
     width: 70px;
   }
 
-  .eightbit {
-    display: none;
-  }
-
   #save-selection {
-    display: none;
-  }
-
-  .tip {
     display: none;
   }
 
@@ -508,14 +477,6 @@ ul.instructions {
   visibility: hidden;
   line-height: 0;
   height: 0;
-}
-
-.clearfix {
-  display: block;
-}
-
-html[xmlns] .clearfix {
-  display: block;
 }
 
 * html .clearfix {
