--- a/css/app/make8bitart.css
+++ b/css/app/make8bitart.css
@@ -48,12 +48,12 @@ img.icon-button {
 canvas {
   cursor: crosshair;
   display: block;
-  image-rendering: optimizeSpeed;             /* Older versions of FF          */
-  image-rendering: -moz-crisp-edges;          /* FF 6.0+                       */
-  image-rendering: -webkit-optimize-contrast; /* Safari                        */
-  image-rendering: -o-crisp-edges;            /* OS X & Windows Opera (12.02+) */
-  image-rendering: pixelated;                 /* Awesome future-browsers       */
-  -ms-interpolation-mode: nearest-neighbor;   /* IE                            */
+  image-rendering: optimizeSpeed;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: -o-crisp-edges;
+  image-rendering: pixelated;
+  -ms-interpolation-mode: nearest-neighbor;
 }
 
 /* draggy "plugin" */
@@ -194,6 +194,10 @@ input[type="submit"] {
 #filebox label {
   display: block;
   margin: 1em .5em;
+}
+
+.instructions {
+  display: none;
 }
 
 /* color picker/palette box */
