--- a/css/libs/draggybits.css
+++ b/css/libs/draggybits.css
@@ -1,4 +1,4 @@
-/** 
+/**
 * draggybits
 * by css perverts aka nick & jenn
 */
@@ -6,7 +6,8 @@
 .draggy.ui-hidden { display: none;}
 
 /** controls **/
-.draggy .controls img { float:right; }
-.draggy .controls img.ui-dragger { cursor:move; }		
-.draggy .controls img.ui-closer { cursor:pointer; }		
-.draggy .controls img.ui-hider { cursor:pointer; }	
+.draggy .controls { float:right; }
+.draggy .controls button { width: auto; height: auto; padding: 0; margin: 0; background: none; border: none; }
+.draggy .controls .ui-dragger img { cursor:move; }
+.draggy .controls .ui-closer img { cursor:pointer; }
+.draggy .controls .ui-hider img { cursor:pointer; }
