--- a/css/app/make8bitart.css
+++ b/css/app/make8bitart.css
@@ -443,6 +443,12 @@ input[type="submit"] {
   background: url('../assets/bg.png');
 }
 
+#pxon-modal-container textarea {
+  width: 100%;
+  min-width: 500px;
+  min-height: 200px;
+}
+
 /* mobile */
 @media only screen and ( min-device-width: 320px ) and ( max-device-width: 568px ) {
   body {
