--- a/css/app/make8bitart.css
+++ b/css/app/make8bitart.css
@@ -1,4 +1,18 @@
 /**
+* draggybits
+* by css perverts aka nick & jenn
+*/
+
+.draggy.ui-hidden { display: none;}
+
+/** controls **/
+.draggy .controls { float: right; }
+.draggy .controls button { width: auto; height: auto; padding: 0; margin: 0; background: none; border: none; }
+.draggy .controls .ui-dragger { cursor: move; }
+.draggy .controls .ui-closer,
+.draggy .controls .ui-hider { cursor: pointer; }
+
+/**
 * make8bitart css
 * @author jenn schiffer
 */
@@ -6,16 +20,16 @@
 /* fonts */
 @font-face {
   font-family: 'VT323';
-  src: url('/fonts/VT323-Regular-subset.woff2') format('woff2'),
-    url('/fonts/VT323-Regular-subset.zopfli.woff') format('woff'),
-    url('/fonts/VT323-Regular-subset.ttf') format('truetype');
+  src: url('../assets/fonts/VT323-Regular-subset.woff2') format('woff2'),
+    url('../assets/fonts/VT323-Regular-subset.zopfli.woff') format('woff'),
+    url('../assets/fonts/VT323-Regular-subset.ttf') format('truetype');
   font-display: swap;
 }
 @font-face {
   font-family: '8bit Art Sans';
-  src: url('/fonts/8bit-Art-Sans-subset.woff2') format('woff2'),
-    url('/fonts/8bit-Art-Sans-subset.zopfli.woff') format('woff'),
-    url('/fonts/8bit-Art-Sans-subset.ttf')  format('truetype');
+  src: url('../assets/fonts/8bit-Art-Sans-subset.woff2') format('woff2'),
+    url('../assets/fonts/8bit-Art-Sans-subset.zopfli.woff') format('woff'),
+    url('../assets/fonts/8bit-Art-Sans-subset.ttf')  format('truetype');
   font-display: swap;
 }
 
@@ -266,7 +280,7 @@ input[type="file"] {
 
 .button.color {
   background: #fff;
-  border: 5px solid none;
+  border: 5px solid transparent;
   width: 25px;
   height: 25px;
   padding: 0;
@@ -300,7 +314,7 @@ input[type="file"] {
 
 .button.color.transparent {
   border-color: #ccc;
-  background: url('/assets/bg.png');
+  background: url('../assets/bg.png');
 }
 
 .button.color.current,
@@ -443,7 +457,7 @@ input[type="file"] {
   display: block;
   border: 5px solid #000;
   margin: 10px auto;
-  background: url('/assets/bg.png');
+  background: url('../assets/bg.png');
 }
 
 #pxon-modal-container textarea {
